# clg-ma-labs

./: Cargo.toml  README.md  build_web.sh  setup_web_reqs.sh
.cargo/: config.toml
docs/: index.html  ma_labs.js  ma_labs_bg.wasm  manifest.json  sw.js
src/: app.rs  lib.rs  main.rs
src/labs/: mod.rs  seven.rs  six.rs
