[package]
name = "lab_6"
authors = ["Timur Israpilov <very1fale.coder@gmail.com>"]
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.16.0"

[profile.final]
inherits = "release"
lto = "fat"
codegen-units = 1
