[package]
name = "ma-labs"
authors = ["Timur Israpilov <very1fale.coder@gmail.com>"]
license = "GPL-3.0-only"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[profile.final]
inherits = "release"
lto = true
codegen-units = 1
